--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                <div class="services-box">
                    <div class="services-icon"> <i class="icon-aperture"></i> </div> 
                    <div class="services-desc">
-                      <h4>HTML Basic</h4>
-                      <p>Lorem ipsum dolor consectetur dolor consectetur adipisicing incididunt eiusmod tempor incididunt laboredolore adipisicing. </p>
+                      <h4>Otro servicio</h4>
+                      <p>Algun otro tipo de servicio. </p>
                    </div>
                </div>
            </div>
