--- a/index.html
+++ b/index.html
@@ -548,7 +548,11 @@
                         <div class="small">+56 9 6666 6666</div>
                         <div class="small">Dirección: </div>
                         <div class="small"><a href="mailto:eduardocuevas@gmail.com">eduardocuevas@gmail.com</a></div>
-                        <div class="small"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25578.876438899635!2d-73.01154781308175!3d-36.73793977583015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9669b32a53112473%3A0xdc3fb2542c7f57f4!2zUGVuY28sIELDrW8gQsOtbw!5e0!3m2!1ses-419!2scl!4v1625075491956!5m2!1ses-419!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+                        <div class="resizable"></div>
+   
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25578.876438899635!2d-73.01154781308175!3d-36.73793977583015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9669b32a53112473%3A0xdc3fb2542c7f57f4!2zUGVuY28sIELDrW8gQsOtbw!5e0!3m2!1ses-419!2scl!4v1625075491956!5m2!1ses-419!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>  
+
+                        </div>
                         
                     </div>
 
