--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 							<div class="logo-nav">
 								<a href="index.html">
 									<img src="images/logo2.png" alt="Company logo" />
+                                    <img src="images/logo.png" alt="Company logo" />
 								</a>
 							</div>
                             <!--End Logo -->
@@ -323,9 +324,9 @@
                     <div class="contact-info text-center">
 
                         <div class="small">Eduardo Cuevas</div>                   
-                        <div class="small">+56 9 6666 6666</div>
-                        <div class="small">Dirección: </div>
+                        <div class="small">+56 9 2235 6767</div>                     
                         <div class="small"><a href="mailto:eduardocuevas@gmail.com">eduardocuevas@gmail.com</a></div>
+                        <div class="small">Dirección: Alcazár 455, Penco</div>
                         <div class="resizable">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1344.3411097907328!2d-72.98953888315035!3d-36.736968147520706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96684cabdf6caa4b%3A0xa98df038810a5c51!2zQWxjw6F6YXIgNDU1LCBQZW5jbywgQsOtbyBCw61v!5e0!3m2!1sen!2scl!4v1626322363237!5m2!1sen!2scl" width="600" height="900" style="border:0;" allowfullscreen="" loading="lazy"></iframe>  
                         </div>
